add logging interface and update test cases